<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameScreen" >

    
    <!--background image -->
    <ImageView   
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/memorylogo" 
        android:contentDescription="@string/TODO"/>

    <!-- Welcome title -->
    <TextView
        android:id="@+id/textView1"
        style="style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/Welcome_to_Clicky"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FF0000"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    

    <!-- Options button -->

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignLeft="@+id/button1"
        android:layout_marginBottom="50dp"
        android:onClick="SendToOptions"
        android:text="@string/Options"
        android:textStyle="bold" />

    <!-- Start game button -->
    <Button
        android:id="@+id/button1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignRight="@+id/imageView1"
        android:onClick="SendToGame"
        android:text="@string/Start"
        android:textColorHint="#FF0000"
        android:textStyle="bold" />
	
    <!-- Open Instructions Button -->
    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:onClick="SendToInstructions"
        android:text="@string/Instructions"
        android:textStyle="bold"
         />

</RelativeLayout>