<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameOver" >

    <!-- Background Image -->

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/creambackground" />

    <!-- HighScore display -->
    <Button
        android:id="@+id/highScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameOver"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:text="@string/HighScore_10"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Game Over display -->
    <Button
        android:id="@+id/gameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:text="@string/GameOver"
        android:textSize="55sp"
        android:textStyle="bold" />

    <!-- Try again button -->

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:clickable="true"
        android:height="100dp"
        android:onClick="onClick"
        android:text="@string/TryAgain"
        android:textSize="30sp"
        android:textStyle="bold"
        android:width="200dp" />

    <!-- Score Display -->

    <Button
        android:id="@+id/Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highScore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:text="@string/Score"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>